--- a/master/libp2p/stream/chronosstream.html
+++ b/master/libp2p/stream/chronosstream.html
@@ -225,12 +225,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">init
-      <li><a class="reference" href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2CMultiAddress"
+      <li><a class="reference" href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2COpt%5BMultiAddress%5D"
     title="init(C: type ChronosStream; client: StreamTransport; dir: Direction;
-     timeout = DefaultChronosStreamTimeout;
-     observedAddr: MultiAddress = MultiAddress()): ChronosStream">init(C: type ChronosStream; client: StreamTransport; dir: Direction;
-     timeout = DefaultChronosStreamTimeout;
-     observedAddr: MultiAddress = MultiAddress()): ChronosStream</a></li>
+     timeout = DefaultChronosStreamTimeout; observedAddr: Opt[MultiAddress]): ChronosStream">init(C: type ChronosStream; client: StreamTransport; dir: Direction;
+     timeout = DefaultChronosStreamTimeout; observedAddr: Opt[MultiAddress]): ChronosStream</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">shortLog
@@ -325,9 +323,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L28"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L31"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L31" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -342,9 +340,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L25"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L28"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L25" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -353,18 +351,17 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="init,typeChronosStream,StreamTransport,Direction,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2CMultiAddress"><span class="Identifier">init</span></a><span class="Other">(</span><span class="Identifier">C</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">ChronosStream</span><span class="Other">;</span> <span class="Identifier">client</span><span class="Other">:</span> <span class="Identifier">StreamTransport</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
-          <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="Identifier">DefaultChronosStreamTimeout</span><span class="Other">;</span>
-          <span class="Identifier">observedAddr</span><span class="Other">:</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a> <span class="Other">=</span> <a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a> {.
+<div id="init,typeChronosStream,StreamTransport,Direction,Opt[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#init%2CtypeChronosStream%2CStreamTransport%2CDirection%2COpt%5BMultiAddress%5D"><span class="Identifier">init</span></a><span class="Other">(</span><span class="Identifier">C</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">ChronosStream</span><span class="Other">;</span> <span class="Identifier">client</span><span class="Other">:</span> <span class="Identifier">StreamTransport</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+          <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="Identifier">DefaultChronosStreamTimeout</span><span class="Other">;</span> <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L59"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L62"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L59" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L62" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -374,9 +371,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L40"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L43"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L43" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -391,27 +388,14 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L140"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L146"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L140" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L146" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="closed.e,ChronosStream" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#closed.e%2CChronosStream"><span class="Identifier">closed</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L137"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L137" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="closeImpl.e,ChronosStream" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#closeImpl.e%2CChronosStream"><span class="Identifier">closeImpl</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -422,15 +406,28 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="closeImpl.e,ChronosStream" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#closeImpl.e%2CChronosStream"><span class="Identifier">closeImpl</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L149"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L149" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="getWrapped.e,ChronosStream" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#getWrapped.e%2CChronosStream"><span class="Identifier">getWrapped</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="chronosstream.html#ChronosStream"><span class="Identifier">ChronosStream</span></a><span class="Other">)</span><span class="Other">:</span> <a href="connection.html#Connection"><span class="Identifier">Connection</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L163"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L169"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L163" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L169" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -440,9 +437,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L49"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L52"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L49" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L52" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -453,9 +450,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L97"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L100"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L97" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L100" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -466,9 +463,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L127"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L130"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L127" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L130" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -483,9 +480,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L47"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/stream/chronosstream.nim#L50"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L47" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/stream/chronosstream.nim#L50" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -499,7 +496,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-26 09:51:34 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-10-21 18:12:07 UTC</small>
       </div>
     </div>
   </div>
