--- a/master/libp2p/transports/transport.html
+++ b/master/libp2p/transports/transport.html
@@ -271,8 +271,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">upgradeOutgoing
-      <li><a class="reference" href="#upgradeOutgoing.e%2CTransport%2CConnection"
-    title="upgradeOutgoing(self: Transport; conn: Connection): Future[Connection]">upgradeOutgoing(self: Transport; conn: Connection): Future[Connection]</a></li>
+      <li><a class="reference" href="#upgradeOutgoing.e%2CTransport%2CConnection%2COpt%5BPeerId%5D"
+    title="upgradeOutgoing(self: Transport; conn: Connection; peerId: Opt[PeerId]): Future[
+    Connection]">upgradeOutgoing(self: Transport; conn: Connection; peerId: Opt[PeerId]): Future[
+    Connection]</a></li>
 
   </ul>
 
@@ -420,9 +422,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 check if transport supports the multiaddress 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/transports/transport.nim#L97"
+href="https://github.com/status-im/nim-libp2p/tree/master/libp2p/transports/transport.nim#L98"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/transport.nim#L97" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/transport.nim#L98" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -465,9 +467,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="upgradeOutgoing.e,Transport,Connection" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#upgradeOutgoing.e%2CTransport%2CConnection"><span class="Identifier">upgradeOutgoing</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.
-    <span class="Identifier">base</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="upgradeOutgoing.e,Transport,Connection,Opt[PeerId]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#upgradeOutgoing.e%2CTransport%2CConnection%2COpt%5BPeerId%5D"><span class="Identifier">upgradeOutgoing</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="../upgrademngrs/upgrade.html#Transport"><span class="Identifier">Transport</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">]</span> {.<span class="Identifier">base</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 base upgrade method that the transport uses to perform transport specific upgrades 
@@ -488,7 +490,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-26 09:51:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-10-21 18:12:07 UTC</small>
       </div>
     </div>
   </div>
